--- a/language/SI.json
+++ b/language/SI.json
@@ -1,17 +1,17 @@
 {
     "LANGUAGE": "English",
     "LANGCODE": "en",
-    "AUTHOR"  : "sanuwa official",
+    "AUTHOR"  : "pramesh nilakshan ",
     "STRINGS" : { 
                   "aqua" : {   
                             "COMMAND"  : "විධානය",
                             "DESC"     : "විස්තරය",
                             "EXAMPLE"  : "උදා",
-                            "NOT_FOUND": "*විධානය හමු නොවීය.*",
+                            "NOT_FOUND": "*විධානය හමු නොවීය☹️.*",
                             "WARN"     : "අනතුරු ඇගවීම"
                            },
                   "yt" :   {
-                            "N_SONG"   : "*🧜‍♀️💬ගීතයක නමක් ඇතුළත් කරන්න.*\nඋදා : .song faded" ,
+                            "N_SONG"   : "*🧜‍♀️💬ගීතයක නමක් ඇතුළත් කරන්න.*\nඋදා : .song ආලෙ මල්" ,
                             "NOT_SONG" : "*ගීතය හමු නොවීය‼️*" ,
                             "S_YT"     : "*🔍 YOUTUBE හි සොයමින්...*" ,
                             "N_YT"     : "*🧜‍♀️💬මාතෘකාවක් ඇතුළත් කරන්න.* \n :උදා : .getyt sri lanka cricket" ,
