--- a/language/EN.json
+++ b/language/EN.json
@@ -36,7 +36,94 @@
                              "MUTE"          : "*🧜‍♀️💬The group chat has muted!.*",
                              "UNMUTE"        : "*🧜‍♀️💬The group chat has unmuted!.*",
                              "PROMOTE"       : "has been promoted !",
+                             "DEMOTE"        : "has been demoted !"{
+    "LANGUAGE": "English",
+    "LANGCODE": "en",
+    "AUTHOR"  : "sanuwa official",
+    "STRINGS" : { 
+                  "aqua" : {   
+                            "COMMAND"  : "Command",
+                            "DESC"     : "Description",
+                            "EXAMPLE"  : "Example",
+                            "NOT_FOUND": "*I couldnt find a command like this*",
+                            "WARN"     : "Warn"
+                           },
+                  "yt" :   {
+                            "N_SONG"   : "*🧜‍♀️💬أدخل إسم أغنية*\nex : .song faded" ,
+                            "NOT_SONG" : "لم يتم إيجاد هذه الأغنية‼️*" ,
+                            "S_YT"     : "*🔍جاري البحت في يوتيوب..*" ,
+                            "N_YT"     : "*🧜‍♀️💬أدخل عنوانا مناسبا* \nex : .getyt sri lanka cricket" ,
+                            "N_VID"    : "*🧜‍♀️💬أدخل رابط فيديو يوتيوب*\nex : .video https://youtu.be/pyCIKli4YUA" ,
+                            "N_FB"     : "*🧜‍♀️💬أدخل رابط فيديو فيسبوك*" , 
+                            "N_MF"     : "*🧜‍♀️💬أدخل رابط ميديافير*" , 
+                            "N_TIK"    : "*🧜‍♀️💬أدخل رابط فيديو تيكتوك*" ,
+                            "NOT_VID"  : "*الفيديو غير موجود‼️*", 
+                            "N_IG "    : "🧜‍♀️💬أدخل رابط إنستجرام",
+                            "N_FOUND"  : "*غير موجود‼️*"
+                          } ,
+                "admin" : {  
+                             "UR_NOT_ADMIN": "*أنت لست صاحب المجوعة !*",
+                             "IM_NOT_ADMIN": "*أن لست صاحب المجوعة*",
+                             
+                             "BANNED": "تم إخراجه من المجموعة!",
+                             "GIVE_ME_USER": "*إعطني رقم مستخدم!*" ,
+                             "USER_IS_ADMIN" : "*لا يمكن إخراج مسؤولي المجموعة!*" ,
+                             "ADDED"         : "تمت الإضافة إلى المجموعة !!" ,
+                             "E_USER"        : "*🧜‍♀️💬 أدخل الرقم لكي تتم إضافته إلى المجموعة مع إضافة رمز الدولة ودون إضافة + أو الفراغات.*",
+                             "ISN_ADMIN"     : "*🧜‍♀️💬الشخص الذي تريد أخد مكانه ليس صاحب المجموعة.*",
+                             "IS_ADMIN"      : "*🧜‍♀️💬الشخص الدي أخدت مكانه صاحب المجموعة.*",
+                             "MUTE"          : "*🧜‍♀️💬لقد تم غلق المجموعة!.*",
+                             "UNMUTE"        : "*🧜‍♀️💬لقد تم فتح المجموعة!.*",
+                             "PROMOTE"       : "has been promoted !",
                              "DEMOTE"        : "has been demoted !"
+    
+                           } ,
+                "stic" : {
+                              "NEED"   : "*🧜‍♀️💬 المرجوا الرد على صورة أو فيديو*" ,
+                              "C_STIC" : "```🧰جاري إنشاء الملصق...```" ,
+                              "N_STIC" : "*🧜‍♀️💬 المرجو الرد على ملصق.*" ,
+                              "C_IMG"  : "```🧰جاري تحويل الملصق إلى صورة...```" ,
+                              "C_VID"  : "```🧰جاري تحويل الملصق المتحرك إلى فيديو...```" 
+                           },
+               
+                "apk"  :  {  
+                              "N_LINK" : "*🧜‍♀️💬 أدخل رابط تطبيق من بلايستور.*" ,
+                              "ERROR"  : "*🧜‍♀️💬التطبيق غير موجود!.*"
+    
+                           },
+         "filters": {
+            "FILTER_DESC": "It adds a filter. If someone writes your filter, it send the answer. If you just write .filter, it show's your filter list.",
+            "NO_FILTER": "*❌ There are no filters in this chat!*",
+            "FILTERS": "*🔎 There is your filters in this chat:*",
+            "NEED_REPLY": "*❌ Please type in reply!*\n*Example:*",
+            "FILTERED": "*✅ Successfully set* ```{}``` *to filter!*",
+            "STOP_DESC": "Stops the filter you added previously.",
+            "NEED_FILTER": "*❌ Please type a filter!*\n*Example:*",
+            "ALREADY_NO_FILTER": "*❌ There is already no filter like this!*",
+            "DELETED": "*✅ The filter was successfully deleted!*"
+        },
+        "greetings": {
+            "NOT_SET_WELCOME": "*🧜‍♀️💬You don't set the welcome message yet.!*\n**To set:** ```.welcome hi && hi#how are you?```",
+            "WELCOME_ALREADY_SETTED": "*✅ Welcome message already set!*\n*Message:* ```",
+            "NEED_WELCOME_TEXT": "*🧜‍♀️💬You must write a message to set up the welcome message.*\n*Example:* ```.welcome hi && hi#how are you?```",
+            "WELCOME_DELETED": "*✅ Welcome message has been deleted successfully!*",
+            "WELCOME_SETTED": "*✅ Welcome message has been set successfully!*",
+            "NOT_SET_GOODBYE": "*🧜‍♀️💬You didn't set a goodbye message!*\n*To set:* ```.goodbye bye && bye#see ya```",
+            "GOODBYE_ALREADY_SETTED": "*✅ Goodbye message has been set!*\n*Message:* ```",
+            "NEED_GOODBYE_TEXT": "*🧜‍♀️💬You must write a message to set up the goodbye message.*\n*Example:* ```.goodbye bye && bye#see ya```",
+            "GOODBYE_DELETED": "*✅ Goodbye message has been deleted successfully!*",
+            "GOODBYE_SETTED": "*✅ Goodbye message has been setted successfully!*"
+        }
+
+
+
+                 }
+
+
+
+
+}
+
     
                            } ,
                 "stic" : {
