--- a/language/EN.json
+++ b/language/EN.json
@@ -1,7 +1,7 @@
 {
     "LANGUAGE": "English",
     "LANGCODE": "en",
-    "AUTHOR"  : "sanuwa official",
+    "AUTHOR"  : "MLaLi ZizWaR",
     "STRINGS" : { 
                   "aqua" : {   
                             "COMMAND"  : "Command",
