--- a/language/SI.json
+++ b/language/SI.json
@@ -69,7 +69,7 @@
             "NEED_WELCOME_TEXT": "*🧜‍♀️💬☬සකුන්☬ පිළිගැනීමේ පණිවිඩය සැකසීමට ඔබ පණිවිඩයක් ලිවිය යුතුය.*\n*Example:* ```.welcome WELCOME!```",
             "WELCOME_DELETED": "*✅☬සකුන්☬ පිළිගැනීමේ පණිවිඩය සාර්ථකව මකා දමා ඇත!*",
             "WELCOME_SETTED": "*✅☬සකුන්☬ පිළිගැනීමේ පණිවිඩය සාර්ථකව සකසා ඇත!*",
-            "NOT_SET_GOODBYE": "*🧜‍♀️💬☬සකුන්☬ සමුගැනීමේ පණිවිඩයක් සකසා නැත!*\n*To set:* ```.goodbye ඔබගේ ආයුබෝවන් පණිවිඩය```",
+            "NOT_SET_GOODBYE": "*🧜‍♀️💬☬සකුන්☬ සමුගැනීමේ පණිවිඩයක් සකසා නැත!*\n*To set:* ```.goodbye ☬සකුන්ගේ☬ ආයුබෝවන් පණිවිඩය```",
             "GOODBYE_ALREADY_SETTED": "*✅☬සකුන්☬ සමුගැනීමේ පණිවිඩය සකසා ඇත!*\n*Message:* ```",
             "NEED_GOODBYE_TEXT": "*🧜‍♀️💬☬සකුන්☬ සමුගැනීමේ පණිවිඩය සැකසීමට ඔබ පණිවිඩයක් ලිවිය යුතුය.*\n*Example:* ```.goodbye Goodbye!```",
             "GOODBYE_DELETED": "*✅☬සකුන්☬ සමුගැනීමේ පණිවිඩය සාර්ථකව මකා දමා ඇත!*",
