--- a/language/SI.json
+++ b/language/SI.json
@@ -1,54 +1,54 @@
 {
     "LANGUAGE": "English",
     "LANGCODE": "en",
-    "AUTHOR"  : "sanuwa official",
+    "AUTHOR"  : "sakun kaveesha",
     "STRINGS" : { 
                   "aqua" : {   
-                            "COMMAND"  : "විධානය",
-                            "DESC"     : "විස්තරය",
-                            "EXAMPLE"  : "උදා",
-                            "NOT_FOUND": "*විධානය හමු නොවීය.*",
-                            "WARN"     : "අනතුරු ඇගවීම"
+                            "COMMAND"  : "☬සකුන් විධානය☬",
+                            "DESC"     : "☬සකුන්ගේ විස්තරය☬",
+                            "EXAMPLE"  : "☬සකුන්ගේ උදා☬",
+                            "NOT_FOUND": "*☬සකුන්ට විධානය හමු නොවීය☬*",
+                            "WARN"     : "☬සකුන් අනතුරු ඇගවීම☬"
                            },
                   "yt" :   {
-                            "N_SONG"   : "*🧜‍♀️💬ගීතයක නමක් ඇතුළත් කරන්න.*\nඋදා : .song faded" ,
-                            "NOT_SONG" : "*ගීතය හමු නොවීය‼️*" ,
-                            "S_YT"     : "*🔍 YOUTUBE හි සොයමින්...*" ,
-                            "N_YT"     : "*🧜‍♀️💬මාතෘකාවක් ඇතුළත් කරන්න.* \n :උදා : .getyt sri lanka cricket" ,
-                            "N_VID"    : "*🧜‍♀️💬YOUTUBE වීඩියෝ LINK එකක් ඇතුළත් කරන්න.*\nඋදා : .video https://youtu.be/pyCIKli4YUA" ,
-                            "NOT_VID"  : "*වීඩියෝව හමු නොවීය‼️*",
-                            "N_TIK"    : "*🧜‍♀️💬කරුණාකර tiktok වීඩියෝ link එකක් ඇතුළත් කරන්න.*" ,
-                            "N_MF"     : "*🧜‍♀️💬කරුණාකර mediafire link එකක් ඇතුළත් කරන්න.*" , 
-                            "N_FB"     : "*🧜‍♀️💬කරුණාකර ෆේස්බුක් වීඩියෝ link එකක් ඇතුළත් කරන්න.*" , 
-                            "N_IG "    : "*🧜‍♀️💬කරුණාකර instagram link එකක් ඇතුළත් කරන්න.*",
-                            "N_FOUND"  : "*හමු නොවීය‼️*"
+                            "N_SONG"   : "*🧜‍♀️💬☬සකුන්ට ගීතයක නමක් ඇතුළත් කරන්න☬.*\nඋදා : .song faded" ,
+                            "NOT_SONG" : "*☬සකුන්ට☬ ගීතය හමු නොවීය‼️*" ,
+                            "S_YT"     : "*🔍☬සකුන් YOUTUBE හි සොයමින්☬*" ,
+                            "N_YT"     : "*🧜‍♀️💬☬සකුන්ට මාතෘකාවක් ඇතුළත් කරන්න☬.* \n :උදා : .getyt sri lanka cricket" ,
+                            "N_VID"    : "*🧜‍♀️💬☬සකුන්ට YOUTUBE වීඩියෝ LINK එකක් ඇතුළත් කරන්න☬.*\nඋදා : .video https://youtu.be/rYLF6KNHE-c" ,
+                            "NOT_VID"  : "*☬සකුන්ට වීඩියෝව හමු නොවීය‼️☬*",
+                            "N_TIK"    : "*🧜‍♀️💬☬සකුන්ට කරුණාකර tiktok වීඩියෝ link එකක් ඇතුළත් කරන්න.☬*" ,
+                            "N_MF"     : "*🧜‍♀️💬☬සකුන්ට කරුණාකර mediafire link එකක් ඇතුළත් කරන්න.☬*" , 
+                            "N_FB"     : "*🧜‍♀️💬☬සකුන්ට කරුණාකර ෆේස්බුක් වීඩියෝ link එකක් ඇතුළත් කරන්න.☬*" , 
+                            "N_IG "    : "*🧜‍♀️💬☬සකුන්ට කරුණාකර instagram link එකක් ඇතුළත් කරන්න.☬*",
+                            "N_FOUND"  : "*☬සකුන්ට හමු නොවීය‼️☬*"
                           } ,
                 "admin" : {  
-                             "UR_NOT_ADMIN"  : "🧜‍♀️💬 ඔබ කණ්ඩායම් පරිපාලකවරයෙකු නොවේ.*!*",
-                             "IM_NOT_ADMIN"  : "🧜‍♀️💬 මම මෙම කණ්ඩායමේ පරිපාලකයෙකු නොවේ.*!*",
-                             "BANNED"        : "ඉවත් කෙරුණා!",
-                             "GIVE_ME_USER"  : "*🧜‍♀️💬 සාමාජිකයෙකු mention කරන්න!*",                       
-                             "USER_IS_ADMIN" : "*🧜‍♀️💬 කණ්ඩායම් පරිපාලකවරයෙකු ඉවත් කළ නොහැක!*" ,
-                             "ADDED"         : "කණ්ඩායමට එකතු කරන ලදි!" ,
-                             "E_USER"        : "*🧜‍♀️💬 + ලකුණ හා හිස්තැන් රහිතව රටෙහි කේතය සමග කණ්ඩායමට එකතු කළ යුතු අංකය ඇතුලත් කරන්න.*",
-                             "ISN_ADMIN"     : "*🧜‍♀️💬ඔබ mention කළ පුද්ගලයා කණ්ඩායම් පරිපාලකයෙකු නොවේ.*",
-                             "IS_ADMIN"      : "*🧜‍♀️💬ඔබ mention කළ පුද්ගලයා කණ්ඩායම් පරිපාලකයෙකි.*",
-                             "MUTE"          : "*🧜‍♀️💬කණ්ඩායම පරිපාලකවරුන්ට පමණක් chat කළ හැකි ආකාරයට ක්‍රියා කරයි.*",
-                             "UNMUTE"        : "*🧜‍♀️💬කණ්ඩායම සියලුම සාමාජිකයන්ට chat කළ හැකි ආකාරයට ක්‍රියා කරයි.*",
-                             "PROMOTE"       : "පරිපාලකයෙකු බවට පත් කරන ලදී !",
-                             "DEMOTE"        : "පරිපාලක තනතුරෙන් ඉවත් කෙරුනා !"
+                             "UR_NOT_ADMIN"  : "🧜‍♀️💬☬සකුන් කණ්ඩායම් පරිපාලකවරයෙකු නොවේ☬.*!*",
+                             "IM_NOT_ADMIN"  : "🧜‍♀️💬☬සකුන් මෙම කණ්ඩායමේ පරිපාලකයෙකු නොවේ☬.*!*",
+                             "BANNED"        : "☬ඉවත් කෙරුණා☬!",
+                             "GIVE_ME_USER"  : "*🧜‍♀️💬☬සකුන්ට සාමාජිකයෙකු mention කරන්න☬!*",                       
+                             "USER_IS_ADMIN" : "*🧜‍♀️💬☬සකුන්ට කණ්ඩායම් පරිපාලකවරයෙකු ඉවත් කළ නොහැක☬!*" ,
+                             "ADDED"         : "☬සකුන්ගේ කණ්ඩායමට එකතු කරන ලදි☬!" ,
+                             "E_USER"        : "*🧜‍♀️💬☬සකුන්ට + ලකුණ හා හිස්තැන් රහිතව රටෙහි කේතය සමග කණ්ඩායමට එකතු කළ යුතු අංකය ඇතුලත් කරන්න☬.*",
+                             "ISN_ADMIN"     : "*🧜‍♀️💬☬ඔබ සකුන්ට mention කළ පුද්ගලයා කණ්ඩායම් පරිපාලකයෙකු නොවේ☬.*",
+                             "IS_ADMIN"      : "*🧜‍♀️💬☬ඔබ සකුන්ට mention කළ පුද්ගලයා කණ්ඩායම් පරිපාලකයෙකි☬.*",
+                             "MUTE"          : "*🧜‍♀️💬☬කණ්ඩායම පරිපාලකවරුන්ට පමණක් chat කළ හැකි ආකාරයට සකුන් ක්‍රියා කරයි☬.*",
+                             "UNMUTE"        : "*🧜‍♀️💬☬කණ්ඩායම සියලුම සාමාජිකයන්ට chat කළ හැකි ආකාරයට සකුන් ක්‍රියා කරයි☬.*",
+                             "PROMOTE"       : "☬සකුන් පරිපාලකයෙකු බවට පත් කරන ලදී☬ !",
+                             "DEMOTE"        : "☬සකුන් පරිපාලක තනතුරෙන් ඉවත් කෙරුනා☬ !"
                            },
                 "stic" : {
-                              "NEED"   : "*🧜‍♀️💬 ඡායාරූපයක් , වීඩියෝවක් mention කරන්න*" ,
-                              "C_STIC" : "```🧰 ස්ටිකරය නිර්මාණය කරමින් පවතී...```" ,
-                              "N_STIC" : "*🧜💬 කරුණාකර ස්ටිකරයක් mention කරන්න.*" ,
-                              "C_IMG"  : "```🧰 ස්ටිකරය ඡායාරූපයක් බවට පත් කරමින්...```" ,
-                              "C_VID"  : "```🧰ස්ටිකරය වීඩියෝවක් බවට පත් කරමින්...```" 
+                              "NEED"   : "*🧜‍♀️💬☬සකුන්ට ඡායාරූපයක් , වීඩියෝවක් mention කරන්න☬*" ,
+                              "C_STIC" : "```🧰☬සකුන් ස්ටිකරය නිර්මාණය කරමින් පවතී☬...```" ,
+                              "N_STIC" : "*🧜💬☬සකුන්ට කරුණාකර ස්ටිකරයක් mention කරන්න☬.*" ,
+                              "C_IMG"  : "```🧰☬සකුන් ස්ටිකරය ඡායාරූපයක් බවට පත් කරමින්☬...```" ,
+                              "C_VID"  : "```🧰☬සකුන් ස්ටිකරය වීඩියෝවක් බවට පත් කරමින්☬...```" 
                            },
                
                 "apk"  :  {  
-                              "N_LINK" : "*🧜‍♀️💬google playstore app link එකක් ඇතුළත් කරන්න.*" ,
-                              "ERROR"  : "*🧜‍♀️💬APK ගොනුව හමු නොවීය.*"
+                              "N_LINK" : "*🧜‍♀️💬☬සකුන්ට google playstore app link එකක් ඇතුළත් කරන්න☬.*" ,
+                              "ERROR"  : "*🧜‍♀️💬☬සකුන්ට APK ගොනුව හමු නොවීය☬.*"
     
                            },
         "filters": {
@@ -57,23 +57,23 @@
             "FILTERS": "*🔎 There is your filters in this chat:*",
             "NEED_REPLY": "*❌ Please type in reply!*\n*Example:*",
             "FILTERED": "*✅ Successfully set* ```{}``` *to filter!*",
-            "STOP_DESC": "ඔබ කලින් එකතු කළ පෙරණය නවත්වයි.",
+            "STOP_DESC": "☬ඔබ කලින් එකතු කළ පෙරණය නවත්වයි☬.",
             "NEED_FILTER": "*❌ Please type a filter!*\n*Example:*",
             "ALREADY_NO_FILTER": "*❌ There is already no filter like this!*",
             "DELETED": "*✅ The filter was successfully deleted!*"
         },
         "greetings": {
             
-            "NOT_SET_WELCOME": "*🧜‍♀️💬ඔබ තවමත් පිළිගැනීමේ පණිවිඩය සකසා නැත.!*\n**සැකසීමට:** ```.welcome ඔබගේ පිළිගැනීමේ පණිවිඩය```",
-            "WELCOME_ALREADY_SETTED": "*✅ පිළිගැනීමේ පණිවිඩය දැනටමත් සකසා ඇත!*\n*පණිවුඩය:* ```",
-            "NEED_WELCOME_TEXT": "*🧜‍♀️💬පිළිගැනීමේ පණිවිඩය සැකසීමට ඔබ පණිවිඩයක් ලිවිය යුතුය.*\n*Example:* ```.welcome WELCOME!```",
-            "WELCOME_DELETED": "*✅ පිළිගැනීමේ පණිවිඩය සාර්ථකව මකා දමා ඇත!*",
-            "WELCOME_SETTED": "*✅ පිළිගැනීමේ පණිවිඩය සාර්ථකව සකසා ඇත!*",
-            "NOT_SET_GOODBYE": "*🧜‍♀️💬ඔබ සමුගැනීමේ පණිවිඩයක් සකසා නැත!*\n*To set:* ```.goodbye ඔබගේ ආයුබෝවන් පණිවිඩය```",
-            "GOODBYE_ALREADY_SETTED": "*✅ සමුගැනීමේ පණිවිඩය සකසා ඇත!*\n*Message:* ```",
-            "NEED_GOODBYE_TEXT": "*🧜‍♀️💬සමුගැනීමේ පණිවිඩය සැකසීමට ඔබ පණිවිඩයක් ලිවිය යුතුය.*\n*Example:* ```.goodbye Goodbye!```",
-            "GOODBYE_DELETED": "*✅ සමුගැනීමේ පණිවිඩය සාර්ථකව මකා දමා ඇත!*",
-            "GOODBYE_SETTED": "*✅ සමුගැනීමේ පණිවිඩය සාර්ථකව සකසා ඇත!*"
+            "NOT_SET_WELCOME": "*🧜‍♀️💬☬ඔබ තවමත් සකුන්ගෙ පිළිගැනීමේ පණිවිඩය සකසා නැත☬.!*\n**සැකසීමට:** ```.welcome ඔබගේ පිළිගැනීමේ පණිවිඩය```",
+            "WELCOME_ALREADY_SETTED": "*✅☬සකුන්ගේ පිළිගැනීමේ පණිවිඩය දැනටමත් සකසා ඇත☬!*\n*පණිවුඩය:* ```",
+            "NEED_WELCOME_TEXT": "*🧜‍♀️💬☬සකුන්ගේ පිළිගැනීමේ පණිවිඩය සැකසීමට ඔබ පණිවිඩයක් ලිවිය යුතුය☬.*\n*Example:* ```.welcome WELCOME!```",
+            "WELCOME_DELETED": "*✅☬සකුන්ගේ පිළිගැනීමේ පණිවිඩය සාර්ථකව මකා දමා ඇත☬!*",
+            "WELCOME_SETTED": "*✅☬සකුන්ගේ පිළිගැනීමේ පණිවිඩය සාර්ථකව සකසා ඇත☬!*",
+            "NOT_SET_GOODBYE": "*🧜‍♀️💬☬ඔබ සමුගැනීමේ පණිවිඩයක් සකසා නැත☬!*\n*To set:* ```.goodbye ඔබගේ ආයුබෝවන් පණිවිඩය```",
+            "GOODBYE_ALREADY_SETTED": "*✅☬සකුන්ගෙ සමුගැනීමේ පණිවිඩය සකසා ඇත☬!*\n*Message:* ```",
+            "NEED_GOODBYE_TEXT": "*🧜‍♀️💬☬සකුන්ගෙ සමුගැනීමේ පණිවිඩය සැකසීමට ඔබ පණිවිඩයක් ලිවිය යුතුය☬.*\n*Example:* ```.goodbye Goodbye!```",
+            "GOODBYE_DELETED": "*✅☬සකුන්ගේ සමුගැනීමේ පණිවිඩය සාර්ථකව මකා දමා ඇත☬!*",
+            "GOODBYE_SETTED": "*✅☬සකුන්ගේ සමුගැනීමේ පණිවිඩය සාර්ථකව සකසා ඇත☬!*"
         }
              
 
