--- a/language/SI.json
+++ b/language/SI.json
@@ -11,7 +11,7 @@
                             "WARN"     : "අනතුරු ඇගවීම"
                            },
                   "yt" :   {
-                            "N_SONG"   : "*🧜‍♀️💬ගීතයක නමක් ඇතුළත් කරන්න.*\nඋදා : .song faded" ,
+                            "N_SONG"   : "*🐲💬ගීතයක නමක් ඇතුළත් කරන්න.*\nඋදා : .song faded" ,
                             "NOT_SONG" : "*ගීතය හමු නොවීය‼️*" ,
                             "S_YT"     : "*🔍 YOUTUBE හි සොයමින්...*" ,
                             "N_YT"     : "*🧜‍♀️💬මාතෘකාවක් ඇතුළත් කරන්න.* \n :උදා : .getyt sri lanka cricket" ,
