--- a/language/SI.json
+++ b/language/SI.json
@@ -11,44 +11,44 @@
                             "WARN"     : "අනතුරු ඇගවීම"
                            },
                   "yt" :   {
-                            "N_SONG"   : "*🐲💬ගීතයක නමක් ඇතුළත් කරන්න.*\nඋදා : .song faded" ,
+                            "N_SONG"   : "*🐲💬ගීතයක නමක් ඇතුළත් කරන්න.*\nඋදා : .song කොපර කොපර පිපිඤ්ඤා" ,
                             "NOT_SONG" : "*ගීතය හමු නොවීය‼️*" ,
                             "S_YT"     : "*🔍 YOUTUBE හි සොයමින්...*" ,
-                            "N_YT"     : "*🧜‍♀️💬මාතෘකාවක් ඇතුළත් කරන්න.* \n :උදා : .getyt sri lanka cricket" ,
-                            "N_VID"    : "*🧜‍♀️💬YOUTUBE වීඩියෝ LINK එකක් ඇතුළත් කරන්න.*\nඋදා : .video https://youtu.be/pyCIKli4YUA" ,
+                            "N_YT"     : "*🐲💬මාතෘකාවක් ඇතුළත් කරන්න.* \n :උදා : .getyt අලව්වෙත් ඔ" ,
+                            "N_VID"    : "*🐲💬YOUTUBE වීඩියෝ LINK එකක් ඇතුළත් කරන්න.*\nඋදා : .video https://youtu.be/pyCIKli4YUA" ,
                             "NOT_VID"  : "*වීඩියෝව හමු නොවීය‼️*",
-                            "N_TIK"    : "*🧜‍♀️💬කරුණාකර tiktok වීඩියෝ link එකක් ඇතුළත් කරන්න.*" ,
-                            "N_MF"     : "*🧜‍♀️💬කරුණාකර mediafire link එකක් ඇතුළත් කරන්න.*" , 
-                            "N_FB"     : "*🧜‍♀️💬කරුණාකර ෆේස්බුක් වීඩියෝ link එකක් ඇතුළත් කරන්න.*" , 
-                            "N_IG "    : "*🧜‍♀️💬කරුණාකර instagram link එකක් ඇතුළත් කරන්න.*",
+                            "N_TIK"    : "*🐲💬කරුණාකර tiktok වීඩියෝ link එකක් ඇතුළත් කරන්න.*" ,
+                            "N_MF"     : "*🐲💬කරුණාකර mediafire link එකක් ඇතුළත් කරන්න.*" , 
+                            "N_FB"     : "*🐲💬කරුණාකර ෆේස්බුක් වීඩියෝ link එකක් ඇතුළත් කරන්න.*" , 
+                            "N_IG "    : "*🐲💬කරුණාකර instagram link එකක් ඇතුළත් කරන්න.*",
                             "N_FOUND"  : "*හමු නොවීය‼️*"
                           } ,
                 "admin" : {  
-                             "UR_NOT_ADMIN"  : "🧜‍♀️💬 ඔබ කණ්ඩායම් පරිපාලකවරයෙකු නොවේ.*!*",
-                             "IM_NOT_ADMIN"  : "🧜‍♀️💬 මම මෙම කණ්ඩායමේ පරිපාලකයෙකු නොවේ.*!*",
+                             "UR_NOT_ADMIN"  : "*🐲💬 ඔබ කණ්ඩායම් පරිපාලකවරයෙකු නොවේ.*!*",
+                             "IM_NOT_ADMIN"  : "*🐲💬 මම මෙම කණ්ඩායමේ පරිපාලකයෙකු නොවේ.*!*",
                              "BANNED"        : "ඉවත් කෙරුණා!",
-                             "GIVE_ME_USER"  : "*🧜‍♀️💬 සාමාජිකයෙකු mention කරන්න!*",                       
-                             "USER_IS_ADMIN" : "*🧜‍♀️💬 කණ්ඩායම් පරිපාලකවරයෙකු ඉවත් කළ නොහැක!*" ,
+                             "GIVE_ME_USER"  : "*🐲💬 සාමාජිකයෙකු mention කරන්න!*",                       
+                             "USER_IS_ADMIN" : "*🐲💬 කණ්ඩායම් පරිපාලකවරයෙකු ඉවත් කළ නොහැක!*" ,
                              "ADDED"         : "කණ්ඩායමට එකතු කරන ලදි!" ,
-                             "E_USER"        : "*🧜‍♀️💬 + ලකුණ හා හිස්තැන් රහිතව රටෙහි කේතය සමග කණ්ඩායමට එකතු කළ යුතු අංකය ඇතුලත් කරන්න.*",
-                             "ISN_ADMIN"     : "*🧜‍♀️💬ඔබ mention කළ පුද්ගලයා කණ්ඩායම් පරිපාලකයෙකු නොවේ.*",
-                             "IS_ADMIN"      : "*🧜‍♀️💬ඔබ mention කළ පුද්ගලයා කණ්ඩායම් පරිපාලකයෙකි.*",
-                             "MUTE"          : "*🧜‍♀️💬කණ්ඩායම පරිපාලකවරුන්ට පමණක් chat කළ හැකි ආකාරයට ක්‍රියා කරයි.*",
-                             "UNMUTE"        : "*🧜‍♀️💬කණ්ඩායම සියලුම සාමාජිකයන්ට chat කළ හැකි ආකාරයට ක්‍රියා කරයි.*",
+                             "E_USER"        : "*🐲💬 + ලකුණ හා හිස්තැන් රහිතව රටෙහි කේතය සමග කණ්ඩායමට එකතු කළ යුතු අංකය ඇතුලත් කරන්න.*",
+                             "ISN_ADMIN"     : "*🐲💬ඔබ mention කළ පුද්ගලයා කණ්ඩායම් පරිපාලකයෙකු නොවේ.*",
+                             "IS_ADMIN"      : "*🐲💬ඔබ mention කළ පුද්ගලයා කණ්ඩායම් පරිපාලකයෙකි.*",
+                             "MUTE"          : "*🐲💬කණ්ඩායම පරිපාලකවරුන්ට පමණක් chat කළ හැකි ආකාරයට ක්‍රියා කරයි.*",
+                             "UNMUTE"        : "*🐲💬කණ්ඩායම සියලුම සාමාජිකයන්ට chat කළ හැකි ආකාරයට ක්‍රියා කරයි.*",
                              "PROMOTE"       : "පරිපාලකයෙකු බවට පත් කරන ලදී !",
                              "DEMOTE"        : "පරිපාලක තනතුරෙන් ඉවත් කෙරුනා !"
                            },
                 "stic" : {
-                              "NEED"   : "*🧜‍♀️💬 ඡායාරූපයක් , වීඩියෝවක් mention කරන්න*" ,
+                              "NEED"   : "*🐲💬 ඡායාරූපයක් , වීඩියෝවක් mention කරන්න*" ,
                               "C_STIC" : "```🧰 ස්ටිකරය නිර්මාණය කරමින් පවතී...```" ,
-                              "N_STIC" : "*🧜💬 කරුණාකර ස්ටිකරයක් mention කරන්න.*" ,
+                              "N_STIC" : "*🐲💬 කරුණාකර ස්ටිකරයක් mention කරන්න.*" ,
                               "C_IMG"  : "```🧰 ස්ටිකරය ඡායාරූපයක් බවට පත් කරමින්...```" ,
                               "C_VID"  : "```🧰ස්ටිකරය වීඩියෝවක් බවට පත් කරමින්...```" 
                            },
                
                 "apk"  :  {  
-                              "N_LINK" : "*🧜‍♀️💬google playstore app link එකක් ඇතුළත් කරන්න.*" ,
-                              "ERROR"  : "*🧜‍♀️💬APK ගොනුව හමු නොවීය.*"
+                              "N_LINK" : "*🐲💬google playstore app link එකක් ඇතුළත් කරන්න.*" ,
+                              "ERROR"  : "*🐲💬APK ගොනුව හමු නොවීය.*"
     
                            },
         "filters": {
@@ -64,14 +64,14 @@
         },
         "greetings": {
             
-            "NOT_SET_WELCOME": "*🧜‍♀️💬ඔබ තවමත් පිළිගැනීමේ පණිවිඩය සකසා නැත.!*\n**සැකසීමට:** ```.welcome ඔබගේ පිළිගැනීමේ පණිවිඩය```",
+            "NOT_SET_WELCOME": "*🐲💬ඔබ තවමත් පිළිගැනීමේ පණිවිඩය සකසා නැත.!*\n**සැකසීමට:** ```.welcome ඔබගේ පිළිගැනීමේ පණිවිඩය```",
             "WELCOME_ALREADY_SETTED": "*✅ පිළිගැනීමේ පණිවිඩය දැනටමත් සකසා ඇත!*\n*පණිවුඩය:* ```",
-            "NEED_WELCOME_TEXT": "*🧜‍♀️💬පිළිගැනීමේ පණිවිඩය සැකසීමට ඔබ පණිවිඩයක් ලිවිය යුතුය.*\n*Example:* ```.welcome WELCOME!```",
+            "NEED_WELCOME_TEXT": "*🐲💬පිළිගැනීමේ පණිවිඩය සැකසීමට ඔබ පණිවිඩයක් ලිවිය යුතුය.*\n*Example:* ```.welcome WELCOME!```",
             "WELCOME_DELETED": "*✅ පිළිගැනීමේ පණිවිඩය සාර්ථකව මකා දමා ඇත!*",
             "WELCOME_SETTED": "*✅ පිළිගැනීමේ පණිවිඩය සාර්ථකව සකසා ඇත!*",
-            "NOT_SET_GOODBYE": "*🧜‍♀️💬ඔබ සමුගැනීමේ පණිවිඩයක් සකසා නැත!*\n*To set:* ```.goodbye ඔබගේ ආයුබෝවන් පණිවිඩය```",
+            "NOT_SET_GOODBYE": "*🐲💬ඔබ සමුගැනීමේ පණිවිඩයක් සකසා නැත!*\n*To set:* ```.goodbye ඔබගේ ආයුබෝවන් පණිවිඩය```",
             "GOODBYE_ALREADY_SETTED": "*✅ සමුගැනීමේ පණිවිඩය සකසා ඇත!*\n*Message:* ```",
-            "NEED_GOODBYE_TEXT": "*🧜‍♀️💬සමුගැනීමේ පණිවිඩය සැකසීමට ඔබ පණිවිඩයක් ලිවිය යුතුය.*\n*Example:* ```.goodbye Goodbye!```",
+            "NEED_GOODBYE_TEXT": "*🐲💬සමුගැනීමේ පණිවිඩය සැකසීමට ඔබ පණිවිඩයක් ලිවිය යුතුය.*\n*Example:* ```.goodbye Goodbye!```",
             "GOODBYE_DELETED": "*✅ සමුගැනීමේ පණිවිඩය සාර්ථකව මකා දමා ඇත!*",
             "GOODBYE_SETTED": "*✅ සමුගැනීමේ පණිවිඩය සාර්ථකව සකසා ඇත!*"
         }
