--- a/language/SI.json
+++ b/language/SI.json
@@ -14,7 +14,7 @@
                             "N_SONG"   : "*🐲💬ගීතයක නමක් ඇතුළත් කරන්න.*\nඋදා : .song කොපර කොපර පිපිඤ්ඤා" ,
                             "NOT_SONG" : "*ගීතය හමු නොවීය‼️*" ,
                             "S_YT"     : "*🔍 YOUTUBE හි සොයමින්...*" ,
-                            "N_YT"     : "*🐲💬මාතෘකාවක් ඇතුළත් කරන්න.* \n :උදා : .getyt අලව්වෙත් ඔ" ,
+                            "N_YT"     : "*🐲💬මාතෘකාවක් ඇතුළත් කරන්න.* \n :උදා : .getyt අලව්වෙත් ඔහොම සිද්දියක් උනා" ,
                             "N_VID"    : "*🐲💬YOUTUBE වීඩියෝ LINK එකක් ඇතුළත් කරන්න.*\nඋදා : .video https://youtu.be/pyCIKli4YUA" ,
                             "NOT_VID"  : "*වීඩියෝව හමු නොවීය‼️*",
                             "N_TIK"    : "*🐲💬කරුණාකර tiktok වීඩියෝ link එකක් ඇතුළත් කරන්න.*" ,
@@ -39,7 +39,7 @@
                              "DEMOTE"        : "පරිපාලක තනතුරෙන් ඉවත් කෙරුනා !"
                            },
                 "stic" : {
-                              "NEED"   : "*🐲💬 ඡායාරූපයක් , වීඩියෝවක් mention කරන්න*" ,
+                              "NEED"   : "*🐲💬 ඡායාරූපයක් හෝ වීඩියෝවක් mention කරන්න*" ,
                               "C_STIC" : "```🧰 ස්ටිකරය නිර්මාණය කරමින් පවතී...```" ,
                               "N_STIC" : "*🐲💬 කරුණාකර ස්ටිකරයක් mention කරන්න.*" ,
                               "C_IMG"  : "```🧰 ස්ටිකරය ඡායාරූපයක් බවට පත් කරමින්...```" ,
